# Calculator

./: .gitignore  CMakeLists.txt  README.md
MathParser/: CMakeLists.txt
MathParser/Source/MathParser/: MathParser.cpp  MathParser.hpp
MathParser/Source/MathParser/Parser/: Token.cpp  Token.hpp
Qml/: Main.qml
Source/: Calculator.cpp  Calculator.hpp  Main.cpp
